force-app/main/default/objects/Moby__c/fields/Red_Containers_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Red_Containers_Total_Amount__c</fullName>
    <label>Red Containers Total Amount</label>
    <summaryFilterItems>
        <field>Container_Tracker__c.Container_Color__c</field>
        <operation>equals</operation>
        <value>Red</value>
    </summaryFilterItems>
    <summaryForeignKey>Container_Tracker__c.Cargo_Ship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>