force-app/main/default/objects/Moby__c/fields/Ship_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_Serial_Number__c</fullName>
    <label>Ship Serial Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>