force-app/main/default/objects/Moby__c/validationRules/Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity</fullName>
    <active>true</active>
    <errorConditionFormula>Ship_Capacity_Status__c  = &quot;The ship is overloaded&quot;</errorConditionFormula>
    <errorMessage>Too many containers. The ship is overloaded.</errorMessage>
</ValidationRule>