force-app/main/default/objects/Moby__c/validationRules/Ship_Serial_Number_STA_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Ship_Serial_Number_STA_Validation</fullName>
    <active>true</active>
    <description>Ship Serial Number should start or contain “STA-”</description>
    <errorConditionFormula>NOT (CONTAINS( Ship_Serial_Number__c , &quot;STA-&quot;))</errorConditionFormula>
    <errorDisplayField>Ship_Serial_Number__c</errorDisplayField>
    <errorMessage>Ship Serial Number should start or contain “STA-”</errorMessage>
</ValidationRule>